maintenance_standards/nohup.out
  File "/workspaces/rep/maintenance_standards/demo_knowledge_graph.py", line 201
    )            
    ^
SyntaxError: unmatched ')'
